--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -19,3 +19,10 @@
 .footer a {
   color: $dark;
 }
+
+.header {
+  margin-bottom: 20px;
+  padding-top: 150px;
+  padding-bottom: 150px;
+  background: linear-gradient(to bottom right, hsl(281deg 100% 53%) 0%, hsl(55deg 96% 46%) 100%);
+}
