Multiple UI/UX & general developments

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -24,5 +24,14 @@
   margin-bottom: 20px;
   padding-top: 150px;
   padding-bottom: 150px;
-  background: linear-gradient(to bottom right, hsl(281deg 100% 53%) 0%, hsl(55deg 96% 46%) 100%);
+  color: white;
+  //background: linear-gradient(to bottom right, hsl(281deg 100% 53%) 0%, hsl(55deg 96% 46%) 100%);
+  background-image: url("https://ichef.bbci.co.uk/news/976/cpsprodpb/A12D/production/_102816214_observingsunposter-jhu-apl.jpg");
+  background-size: cover;
+}
+
+.congrats {
+  background: linear-gradient(to right, hsl(60deg 100% 53%) 0%, hsl(307deg 95% 44%) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
